[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "igloo-doc"
version = "1.0.0"
requires-python = ">=3.9"

dependencies = [
  "Sphinx == 8.2.3",
  "sphinx-autobuild",
  "sphinx_book_theme",
  "myst-parser",
  "linkify-it-py"
]

[tool.hatch.envs.default.scripts]
doc-clean = "rm -rf build/*"
doc-build = "sphinx-build -b html -j auto source/ build/html/"
doc-live = "sphinx-autobuild -j auto --ignore '*.swp' --ignore '*.log' --ignore '*~' -b html source/ build/html/"
list-commands = [
    "echo 'Commands:'; hatch env show --json | jq --raw-output '.default.scripts | keys[]'"
]

# Il faut ignorer les autres ressources python
[tool.ruff]
exclude = ["roles", "playbooks", "dependencies", "library", "lookup_plugins"]
