[tool.poetry]
name = "igloo_doc"
# this is a fake/unused version
version = "0.1.0"
description = ""
authors = ["Kobalt <infra@kobalt.fr>"]

[tool.poetry.dependencies]
python = ">=3.5"
clickable = { git = "https://github.com/lalmeras/clickable.git", branch = "master" }

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
igloo-doc = "clickable.click:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
